test/bad/automatic/extension/class/compile_time/0005.lat
class janusz extends andrzej {
  int barbara;
}

class jaroslaw extends janusz {
  int grzegorz;
}

class andrzej extends jaroslaw {
  int krzysztof;
}

int main() {
  return 1;
}
